fixes preview overflow

--- a/src/Preview.scss
+++ b/src/Preview.scss
@@ -4,12 +4,15 @@
     border: 1px solid #d1d5da;
     margin: 8% 25px;
     height: 80%;
+    display: flex;
+    flex-direction: column;
   }
 
   .top-bar {
     padding: 8px;
     background-color: #f6f8fa;
     border-bottom: 1px solid #d1d5da;
+    flex: 0;
     h3 {
       margin: 0;
       display: flex;
@@ -33,6 +36,7 @@
 
   .body {
     padding: 40px;
+    overflow-y: auto;
     p {
       margin: 0;
     }
